--- a/yyc.html
+++ b/yyc.html
@@ -262,6 +262,8 @@
         <button onclick="openLink('https://im.qq.com/index/')">QQ</button>
         <button onclick="openLink('https://easinote.seewo.com/')">希沃白板</button>
         <button onclick="openLink('https://www.mi.com/index.html')">小米（消费者业务）</button>
+        <button onclick="openLink('https://yyc-html.github.io/yyc.github.io/666.html')">计算器</button>
+
         <div class="underline" id="underline"></div>
     </div>
     <footer>
