--- a/666.html
+++ b/666.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>多功能科学计算器</title>
+    <title>简易计算器</title>
     <style>
         * {
             box-sizing: border-box;
