--- a/yyc.html
+++ b/yyc.html
@@ -268,7 +268,7 @@
     </div>
     <footer>
         请勿抄袭，这是一位小学生的作品。Please do not plagiarize, this is the work of a primary school student.
-        大泡未来终端信息化技术与消费者业务部门
+        大泡未来终端信息化技术与消费者业务部门          网页版本：1.1（SP3） Version：1.1（SP3）
     </footer>
 
     <script>
