--- a/yyc.html
+++ b/yyc.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大泡未来终端（开发人员版）</title>
+    <title>网站快捷链接</title>
     <style>
         /* 设置全局样式，包括字体、背景颜色和内边距 */
         body {
@@ -47,7 +47,6 @@
             justify-content: center;
             gap: 20px;
             margin-top: 30px;
-            position: relative;
         }
 
         /* 按钮样式，添加过渡效果和悬停效果 */
@@ -194,61 +193,20 @@
             color: #884A39;
             font-size: 16px;
         }
-
-        /* 按钮下方横线样式 */
-        .underline {
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            height: 3px;
-            background-color: #FFAB5C;
-            transition: all 0.3s ease;
-        }
-
-        /* 对钩图标样式和动画 */
-        #checkmark {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 30px;
-            height: 30px;
-            opacity: 0;
-            visibility: hidden;
-            transition: all 0.3s ease;
-        }
-
-        #checkmark.show {
-            opacity: 1;
-            visibility: visible;
-            animation: checkmarkAnimation 0.3s ease;
-        }
-
-        @keyframes checkmarkAnimation {
-            0% {
-                transform: translate(-50%, -50%) scale(0);
-            }
-            100% {
-                transform: translate(-50%, -50%) scale(1);
-            }
-        }
     </style>
 </head>
 
 <body>
     <div id="current-time"></div>
-    <h1>这是一个来自中国小学生予译制作的网站。This is a website created by Chinese elementary school students for translation.</h1>
+    <h1>欢迎来到网站快捷访问程序</h1>
     <!-- 滑块验证容器 -->
     <div class="slider-container" id="sliderContainer">
         <div class="slider-bg" id="sliderBg"></div>
         <div class="slider" id="slider"></div>
         <span class="slider-text" id="sliderText">请拖动滑块进行验证</span>
-        <svg id="checkmark" viewBox="0 0 52 52">
-            <path fill="none" stroke="#fff" stroke-width="4" d="M14.1 27.2l7.1 7.2 16.7-16.8" />
-        </svg>
     </div>
     <!-- 加载提示 -->
-    <div id="loading" style="display: none;">加载中······</div>
+    <div id="loading" class="loading" style="display: none;">加载中······</div>
     <div class="button-container" id="buttonContainer">
         <button onclick="openLink('https://www.doubao.com')">豆包</button>
         <button onclick="openLink('https://www.douyin.com')">抖音</button>
@@ -263,71 +221,73 @@
         <button onclick="openLink('https://easinote.seewo.com/')">希沃白板</button>
         <button onclick="openLink('https://www.mi.com/index.html')">小米（消费者业务）</button>
         <button onclick="openLink('https://yyc-html.github.io/yyc.github.io/666.html')">计算器</button>
-
-        <div class="underline" id="underline"></div>
     </div>
     <footer>
-        请勿抄袭，这是一位小学生的作品。Please do not plagiarize, this is the work of a primary school student.
-        大泡未来终端信息化技术与消费者业务部门          网页版本：1.1（SP3） Version：1.1（SP3）
+        请勿抄袭，这是一位小学生的作品。   大泡未来终端信息化技术与消费者业务部门  x  予译  联合制作    版本：2.0.1  Version：2.0.1   停止更新
     </footer>
 
     <script>
-        // 从网络时间服务器获取时间
-        function getTimeFromServer() {
-            const xhr = new XMLHttpRequest();
-            xhr.open('GET', 'https://worldtimeapi.org/api/timezone/Asia/Shanghai', true);
-            xhr.onreadystatechange = function () {
-                if (xhr.readyState === 4) {
-                    if (xhr.status === 200) {
-                        try {
-                            const response = JSON.parse(xhr.responseText);
-                            const date = new Date(response.datetime);
-                            const hours = String(date.getHours()).padStart(2, '0');
-                            const minutes = String(date.getMinutes()).padStart(2, '0');
-                            const seconds = String(date.getSeconds()).padStart(2, '0');
-                            const timeString = `${hours}:${minutes}:${seconds}`;
-                            document.getElementById('current-time').textContent = timeString;
-                            // 若获取成功，之后每秒更新时间都用此函数
-                            setInterval(getTimeFromServer, 1000);
-                        } catch (error) {
-                            console.error('解析时间响应数据时出错:', error);
-                            getLocalTime();
-                            setInterval(getLocalTime, 1000);
-                        }
-                    } else {
-                        console.error('获取网络时间失败，状态码:', xhr.status);
-                        // 网络请求失败，使用本地时间
-                        getLocalTime();
-                        setInterval(getLocalTime, 1000);
-                    }
-                }
-            };
-            xhr.send();
-        }
-
         // 基于本地时间计算北京时间
         function getLocalTime() {
             const now = new Date();
             const offset = 8; // 北京时间是 UTC+8
             const utc = now.getTime() + (now.getTimezoneOffset() * 60000);
             const beijingTime = new Date(utc + (3600000 * offset));
+            const year = beijingTime.getFullYear();
+            const month = String(beijingTime.getMonth() + 1).padStart(2, '0');
+            const day = String(beijingTime.getDate()).padStart(2, '0');
+            const week = ['日', '一', '二', '三', '四', '五', '六'][beijingTime.getDay()];
             const hours = String(beijingTime.getHours()).padStart(2, '0');
             const minutes = String(beijingTime.getMinutes()).padStart(2, '0');
             const seconds = String(beijingTime.getSeconds()).padStart(2, '0');
-            const timeString = `${hours}:${minutes}:${seconds}`;
+            const timeString = `${year}年${month}月${day}日 星期${week} ${hours}:${minutes}:${seconds}`;
             document.getElementById('current-time').textContent = timeString;
         }
 
-        // 页面加载时优先尝试从网络获取时间
-        getTimeFromServer();
+        // 页面加载时先显示本地时间
+        getLocalTime();
+        // 每秒更新本地时间
+        setInterval(getLocalTime, 1000);
+
+        // 从网络时间服务器获取时间
+        function getTimeFromServer() {
+            const xhr = new XMLHttpRequest();
+            xhr.open('GET', 'https://worldtimeapi.org/api/timezone/Asia/Shanghai', true);
+            const loadingElement = document.getElementById('loading');
+            loadingElement.style.display = 'block';
+
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState === 4) {
+                    loadingElement.style.display = 'none';
+                    if (xhr.status === 200) {
+                        try {
+                            const response = JSON.parse(xhr.responseText);
+                            const date = new Date(response.datetime);
+                            const year = date.getFullYear();
+                            const month = String(date.getMonth() + 1).padStart(2, '0');
+                            const day = String(date.getDate()).padStart(2, '0');
+                            const week = ['日', '一', '二', '三', '四', '五', '六'][date.getDay()];
+                            const hours = String(date.getHours()).padStart(2, '0');
+                            const minutes = String(date.getMinutes()).padStart(2, '0');
+                            const seconds = String(date.getSeconds()).padStart(2, '0');
+                            const timeString = `${year}年${month}月${day}日 星期${week} ${hours}:${minutes}:${seconds}`;
+                            document.getElementById('current-time').textContent = timeString;
+                        } catch (error) {
+                            console.error('解析时间响应数据时出错:', error);
+                        }
+                    } else {
+                        console.error('获取网络时间失败，状态码:', xhr.status);
+                    }
+                }
+            };
+            xhr.send();
+        }
 
         let isVerified = false;
         const sliderContainer = document.getElementById('sliderContainer');
         const slider = document.getElementById('slider');
         const sliderBg = document.getElementById('sliderBg');
         const sliderText = document.getElementById('sliderText');
-        const loading = document.getElementById('loading');
-        const checkmark = document.getElementById('checkmark');
         let isDragging = false;
         let startX;
 
@@ -354,75 +314,41 @@
                 console.log('滑块释放');
                 isDragging = false;
                 const rect = sliderContainer.getBoundingClientRect();
-                if (parseInt(slider.style.left) >= rect.width - slider.offsetWidth) {
-                    // 验证通过
+                if (slider.offsetLeft >= rect.width - slider.offsetWidth) {
+                    // 验证成功
                     isVerified = true;
-                    sliderBg.style.width = rect.width + 'px';
                     sliderContainer.classList.add('verified');
-                    sliderText.textContent = '验证通过';
-                    console.log('准备显示对钩动画');
-                    checkmark.classList.add('show');
-                    console.log('已添加 show 类');
-                    // 显示加载提示
-                    loading.style.display = 'block';
-                    loading.classList.add('loading');
-                    // 模拟加载时间
-                    setTimeout(() => {
-                        loading.style.display = 'none';
-                        loading.classList.remove('loading');
-                        console.log('准备隐藏对钩图标');
-                        checkmark.classList.remove('show');
-                        console.log('已移除 show 类');
-                    }, 2000);
+                    sliderText.textContent = '验证成功';
+                    // 验证通过后开始每隔一段时间更新时间服务器的时间
+                    setInterval(getTimeFromServer, 60000); // 修改为1分钟（60000毫秒）
+                    // 立即尝试更新一次
+                    getTimeFromServer();
                 } else {
-                    // 验证失败，重置滑块位置
-                    slider.style.left = '0px';
-                    sliderBg.style.width = '0px';
-                    isVerified = false;
-                    sliderText.textContent = '请拖动滑块进行验证';
+                    // 验证失败
                     sliderContainer.classList.add('verify-fail');
                     setTimeout(() => {
                         sliderContainer.classList.remove('verify-fail');
+                        slider.style.left = 0;
+                        sliderBg.style.width = 0;
                     }, 300);
                 }
             }
         });
 
         function openLink(url) {
-            if (isVerified && loading.style.display === 'none') {
-                window.open(url, '_blank');
-                // 重置验证状态
+            if (isVerified) {
+                // 重置验证状态和滑块位置
                 isVerified = false;
-                slider.style.left = '0px';
-                sliderBg.style.width = '0px';
                 sliderContainer.classList.remove('verified');
+                slider.style.left = 0;
+                sliderBg.style.width = 0;
                 sliderText.textContent = '请拖动滑块进行验证';
+
+                window.open(url, '_blank');
             } else {
-                if (!isVerified) {
-                    alert('请先完成滑块验证');
-                } else {
-                    alert('请等待加载完成');
-                }
+                alert('请先完成滑块验证');
             }
         }
-
-        // 按钮下方横线跟随鼠标移动效果
-        const buttonContainer = document.getElementById('buttonContainer');
-        const underline = document.getElementById('underline');
-        const buttons = buttonContainer.querySelectorAll('button');
-
-        buttons.forEach((button) => {
-            button.addEventListener('mouseenter', () => {
-                const rect = button.getBoundingClientRect();
-                const containerRect = buttonContainer.getBoundingClientRect();
-                underline.style.width = rect.width + 'px';
-                underline.style.left = rect.left - containerRect.left + 'px';
-            });
-        });
-
-        buttonContainer.addEventListener('mouseleave', () => {
-            underline.style.width = '0px';
-        });
     </script>
 </body>
 
