--- a/yyc.html
+++ b/yyc.html
@@ -248,7 +248,7 @@
         <button onclick="openLink(this, 'https://yyc-html.github.io/yyc.github.io/666.html')">计算器</button>
     </div>
     <footer>
-        请勿抄袭，这是一位小学生的作品。   大泡未来终端信息化技术与消费者业务部门  x  予译  联合制作    版本：2.0.1  Version：2.0.1   停止更新
+        请勿抄袭，这是一位小学生的作品。   大泡未来终端信息化技术与消费者业务部门  x  予译  联合制作    版本：2.4.7  Version：2.4.7
     </footer>
 
     <script>
