--- a/yyc.html
+++ b/yyc.html
@@ -6,29 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>网站快捷链接</title>
     <style>
+        :root {
+            --primary-color: #884A39;
+            --secondary-color: #FFC26F;
+            --hover-color: #FFAB5C;
+            --bg-color: #f9f5e7;
+        }
+
         /* 设置全局样式，包括字体、背景颜色和内边距 */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f9f5e7;
+            background-color: var(--bg-color);
             margin: 0;
             padding: 0;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            overflow-y: auto;
             min-height: 100vh;
-            overflow: hidden;
-            /* 调整虚化过渡时间为 1 秒 */
-            transition: filter 1s ease; 
+            transition: filter 1s ease;
         }
 
         /* 标题样式，添加阴影和边距 */
         h1 {
-            color: #884A39;
+            color: var(--primary-color);
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-            margin: 20px 0 0 20px;
-            font-size: 28px;
+            margin: 20px 0 30px 0;
+            font-size: 32px;
             font-weight: bold;
+            text-align: center;
         }
 
         /* 时间显示样式 */
@@ -36,9 +43,9 @@
             position: absolute;
             top: 20px;
             right: 20px;
-            font-size: 24px;
+            font-size: 20px;
             font-weight: bold;
-            color: #884A39;
+            color: var(--primary-color);
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
         }
 
@@ -46,67 +53,80 @@
         .button-container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center; /* 水平居中 */
-            align-items: center; /* 垂直居中 */
-            gap: 20px;
-            margin: 30px auto; /* 上下外边距为 30px，左右自动居中 */
-            max-width: 80%; /* 限制容器宽度 */
-            max-height: calc(3 * (60px + 20px)); /* 假设按钮高度为 60px，间距为 20px，共 3 行 */
-            flex-direction: column; /* 竖向排列 */
+            justify-content: center;
+            align-items: center;
+            gap: 25px;
+            margin: 30px auto;
+            max-width: 90%;
+            flex-direction: column;
         }
 
         /* 按钮样式，添加过渡效果和悬停效果 */
         button {
-            padding: 10px 20px; /* 减少内边距 */
-            font-size: 16px;    /* 适当减小字体大小 */
-            background-color: #FFC26F;
-            color: #884A39;
+            padding: 12px 25px;
+            font-size: 18px;
+            background-color: var(--secondary-color);
+            color: var(--primary-color);
             border: none;
-            border-radius: 8px;
+            border-radius: 12px;
             cursor: pointer;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
-            /* 确保按钮宽度一致 */
-            width: 250px; /* 增大按钮宽度 */
-            /* 防止文字换行 */
-            white-space: nowrap; 
-            /* 隐藏溢出内容 */
-            overflow: hidden; 
-            /* 当文字溢出时显示省略号 */
-            text-overflow: ellipsis; 
+            width: 280px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         button:hover {
-            background-color: #FFAB5C;
-            transform: translateY(-3px);
-            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+            background-color: var(--hover-color);
+            transform: translateY(-4px);
+            box-shadow: 0 8px 12px rgba(0, 0, 0, 0.15);
         }
 
         button:active {
-            transform: scale(0.9);
+            transform: scale(0.95);
+        }
+
+        /* 响应式设计，屏幕宽度大于 768px 时横向排列按钮 */
+        @media (min-width: 768px) {
+            .button-container {
+                flex-direction: row;
+            }
+        }
+
+        /* 手机竖屏样式，隐藏时间显示和部分页脚内容 */
+        @media (max-width: 767px) {
+            #current-time {
+                display: none;
+            }
+            .footer-text-remove {
+                display: none;
+            }
         }
 
         /* 页脚样式，设置颜色和边距 */
         footer {
-            color: #884A39;
-            margin-top: 50px;
-            font-size: 14px;
+            color: var(--primary-color);
+            margin-top: 60px;
+            font-size: 16px;
             text-align: center;
+            padding: 20px;
         }
 
         /* 滑块验证样式 */
         .slider-container {
             position: relative;
-            width: 300px;
-            height: 40px;
+            width: 350px;
+            height: 50px;
             background-color: #F5EBE0;
-            border-radius: 20px;
+            border-radius: 25px;
             margin: 20px auto;
             text-align: center;
-            line-height: 40px;
-            color: #884A39;
+            line-height: 50px;
+            color: var(--primary-color);
             overflow: hidden;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
         }
 
@@ -114,13 +134,13 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 40px;
-            height: 40px;
-            background-color: #FFC26F;
-            border-radius: 20px;
+            width: 50px;
+            height: 50px;
+            background-color: var(--secondary-color);
+            border-radius: 25px;
             cursor: pointer;
             z-index: 2;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
         }
 
@@ -129,9 +149,9 @@
             top: 0;
             left: 0;
             width: 0;
-            height: 40px;
-            background-color: #FFAB5C;
-            border-radius: 20px;
+            height: 50px;
+            background-color: var(--hover-color);
+            border-radius: 25px;
             z-index: 1;
             transition: all 0.3s ease;
         }
@@ -146,7 +166,7 @@
         }
 
         .verified {
-            background-color: #FFAB5C;
+            background-color: var(--hover-color);
             color: white;
             animation: verifySuccess 0.3s ease;
         }
@@ -156,7 +176,7 @@
                 background-color: #F5EBE0;
             }
             100% {
-                background-color: #FFAB5C;
+                background-color: var(--hover-color);
             }
         }
 
@@ -169,13 +189,13 @@
                 transform: translateX(0);
             }
             25% {
-                transform: translateX(-5px);
+                transform: translateX(-8px);
             }
             50% {
-                transform: translateX(5px);
+                transform: translateX(8px);
             }
             75% {
-                transform: translateX(-5px);
+                transform: translateX(-8px);
             }
             100% {
                 transform: translateX(0);
@@ -187,7 +207,8 @@
             animation: breathing 1.5s ease-in-out infinite;
             opacity: 0.5;
             margin-top: 20px;
-            color: #884A39;
+            color: var(--primary-color);
+            font-size: 18px;
         }
 
         @keyframes breathing {
@@ -204,8 +225,8 @@
 
         /* 加载提示样式 */
         #loading {
-            color: #884A39;
-            font-size: 16px;
+            color: var(--primary-color);
+            font-size: 18px;
         }
 
         /* 背景虚化层 */
@@ -224,6 +245,57 @@
         /* 虚化除点击按钮外的其他元素 */
         .blur-except-button {
             filter: blur(5px);
+        }
+
+        /* 悬浮窗样式 */
+        #update-float {
+            position: fixed;
+            right: 30px;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: var(--secondary-color);
+            color: var(--primary-color);
+            padding: 15px 20px;
+            border-radius: 12px;
+            box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-size: 16px;
+            z-index: 5;
+        }
+
+        #update-float:hover {
+            background-color: var(--hover-color);
+            transform: translateY(-50%) scale(1.05);
+        }
+
+        /* 鼠标光环样式 */
+        #mouse-halo {
+            position: fixed;
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            background: radial-gradient(circle, rgba(255, 171, 92, 0.4) 0%, rgba(255, 194, 111, 0) 80%);
+            pointer-events: none;
+            transform: translate(-50%, -50%);
+            z-index: 9999;
+            transition: transform 0.2s ease-out, opacity 0.2s ease-out;
+            animation: pulse 2s infinite;
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: translate(-50%, -50%) scale(0.8);
+                opacity: 0.6;
+            }
+            50% {
+                transform: translate(-50%, -50%) scale(1.2);
+                opacity: 0.3;
+            }
+            100% {
+                transform: translate(-50%, -50%) scale(0.8);
+                opacity: 0.6;
+            }
         }
     </style>
 </head>
@@ -254,22 +326,19 @@
         <button onclick="openLink(this, 'https://easinote.seewo.com/')">希沃白板</button>
         <button onclick="openLink(this, 'https://www.mi.com/index.html')">小米（消费者业务）</button>
         <button onclick="openLink(this, 'https://yyc-html.github.io/yyc.github.io/666.html')">计算器</button>
-        <button onclick="openLink(this, 'https://www.bilibili.com/')">哔哩哔哩</button>
-        <button onclick="openLink(this, 'https://v.qq.com/')">腾讯视频</button>
-        <button onclick="openLink(this, 'https://www.iqiyi.com/')">爱奇艺</button>
     </div>
+    <!-- 悬浮窗 -->
+    <div id="update-float" onclick="checkUpdate(https://yyc-html.github.io/yyc.github.io/update.html)">检查更新</div>
+    <!-- 鼠标光环 -->
+    <div id="mouse-halo"></div>
     <footer>
-        更多网站链接正在接入中，敬请期待！   大泡未来终端信息化技术与消费者业务部门  x  予译  联合制作    版本：2.6.1  Version：2.6.1
+        <span class="footer-text-remove">更多网站链接正在接入中，敬请期待！   </span>大泡未来终端信息化技术与消费者业务部门  x  予译  联合制作    版本：3.6.2  Version：3.6.2
     </footer>
 
     <script>
-        // 页面加载完成时弹出提示框
-        window.onload = function() {
-            alert('亲爱的用户，您好！快捷网站程序现已更新至2.6.1版本。本次更新主要优化了适配兼容性及更多网站，其他网站正在接入中。如有建议，可发送至CENYUYI123456@outlook.com联系，谢谢！');
-        };
-
         const blurOverlay = document.getElementById('blur-overlay');
         const loadingElement = document.getElementById('loading');
+        const mouseHalo = document.getElementById('mouse-halo');
 
         // 使用本地时间
         function getLocalTime() {
@@ -314,6 +383,9 @@
                 slider.style.left = newX + 'px';
                 sliderBg.style.width = newX + 'px';
             }
+            // 更新鼠标光环位置
+            mouseHalo.style.left = e.clientX + 'px';
+            mouseHalo.style.top = e.clientY + 'px';
         });
 
         document.addEventListener('mouseup', () => {
@@ -332,23 +404,48 @@
                     setTimeout(() => {
                         sliderContainer.classList.remove('verify-fail');
                         slider.style.left = 0;
+                        sliderBg.style.width = 0;
                     }, 300);
                 }
             }
         });
 
-        // 定义 openLink 函数
-        function openLink(button, link) {
-            console.log('openLink 函数被调用');
-            console.log('验证状态:', isVerified);
+        function openLink(button, url) {
             if (isVerified) {
-                console.log('尝试打开链接:', link);
-                window.open(link, '_blank');
+                // 显示背景虚化层
+                blurOverlay.style.display = 'block';
+                // 虚化除点击按钮外的其他元素
+                const allElements = document.querySelectorAll('body > *:not(button)');
+                allElements.forEach(element => {
+                    element.classList.add('blur-except-button');
+                });
+                // 重置验证状态和滑块位置
+                isVerified = false;
+                sliderContainer.classList.remove('verified');
+                slider.style.left = 0;
+                sliderBg.style.width = 0;
+                sliderText.textContent = '请拖动滑块进行验证';
+
+                window.open(url, '_blank');
+
+                // 一段时间后隐藏背景虚化层
+                setTimeout(() => {
+                    blurOverlay.style.display = 'none';
+                    allElements.forEach(element => {
+                        element.classList.remove('blur-except-button');
+                    });
+                }, 1000);
             } else {
-                alert('请先完成验证！');
+                alert('请先完成滑块验证');
             }
+        }
+
+        // 检查更新函数，后续可修改跳转链接
+        function checkUpdate() {
+            // 这里替换为实际的更新链接
+            window.open('https://example.com', '_blank');
         }
     </script>
 </body>
 
-</html>    
+</html>
