--- a/update.html
+++ b/update.html
@@ -158,10 +158,10 @@
         <div class="progress-bar">
             <div class="progress" id="progress"></div>
         </div>
-        <div class="result-message" id="resultMessage">已是最新版本 3.8.7</div>
+        <div class="result-message" id="resultMessage">已是最新版本 5.1.1</div>
     </div>
     <div class="animation-container">
-        <!-- 增加到 10 个小球 -->
+        <!-- 增加到 20 个小球 -->
         <div class="ball"></div>
         <div class="ball"></div>
         <div class="ball"></div>
@@ -172,8 +172,19 @@
         <div class="ball"></div>
         <div class="ball"></div>
         <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+        <div class="ball"></div>
+
     </div>
-    <div class="bottom-text">大泡未来终端网站更新检测</div>
+    <div class="bottom-text">大泡未来终端网站 更新检测程序</div>
 
     <script>
         const animationContainer = document.querySelector('.animation-container');
