--- a/123.html
+++ b/123.html
@@ -336,8 +336,8 @@
     <!-- 页脚 -->
     <footer class="bg-dark text-white py-4 mt-8 transition-all duration-500" id="main-footer">
         <div class="container mx-auto px-4 text-center flex flex-col justify-center h-full">
-            <p class="text-[clamp(0.9rem,3vw,1.1rem)]">作品创作者：岑予译</p>
-            <p class="mt-1 text-sm text-white/70">2025-08-31 · 环保从身边小事做起</p>
+            <p class="text-[clamp(0.9rem,3vw,1.1rem)]">作品创作者：岑予译  本页面及实际作品为原创</p>
+            <p class="mt-1 text-sm text-white/70">2025 · 环保从身边小事做起 版本：1.0.1 </p>
         </div>
     </footer>
 
@@ -473,3 +473,4 @@
     </script>
 </body>
 </html>
+
